--- a/G9.Redis.Trigger/G9.Redis.Trigger.csproj
+++ b/G9.Redis.Trigger/G9.Redis.Trigger.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.41" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.37" />
   </ItemGroup>
 
 </Project>
