Used redis trigger in in-process function

--- a/G9.Redis.Subscriber.Debugger/G9.Redis.Subscriber.Debugger.csproj
+++ b/G9.Redis.Subscriber.Debugger/G9.Redis.Subscriber.Debugger.csproj
@@ -7,6 +7,9 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\G9.Redis.Trigger\G9.Redis.Trigger.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
