--- a/G9.Redis.Trigger.Isolated/G9.Redis.Trigger.Isolated.csproj
+++ b/G9.Redis.Trigger.Isolated/G9.Redis.Trigger.Isolated.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
+  </ItemGroup>
+
 </Project>
