--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 trigger:
-- main  # Runs pipeline when changes are pushed to main branch
+- main
 
 pool:
-  vmImage: 'windows-latest'  # Use a hosted Windows agent
+  vmImage: 'windows-latest'
 
 steps:
 - task: UseDotNet@2
@@ -15,11 +15,11 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'restore'
-    restoreSolution: '**/G9.Redis.Trigger.csproj'  # Restores only this project
+    restoreSolution: '**/G9.Redis.Trigger.csproj'
 
 - task: VSBuild@1
   inputs:
-    solution: '**/G9.Redis.Trigger.csproj'  # Builds only this project
+    solution: '**/G9.Redis.Trigger.csproj'
     msbuildArgs: '/p:Configuration=Release'
     platform: 'Any CPU'
     configuration: 'Release'
@@ -27,7 +27,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'pack'
-    packagesToPack: '**/G9.Redis.Trigger.nuspec'  # Packs only this project
+    packagesToPack: '**/G9.Redis.Trigger.nuspec'
     versioningScheme: 'byEnvVar'
     versionEnvVar: 'BUILD_BUILDNUMBER'
 
@@ -36,6 +36,6 @@ steps:
     command: 'push'
     packagesToPush: '**/G9.Redis.Trigger*.nupkg'
     nuGetFeedType: 'internal'
-    publishFeed: 'YourAzureArtifactsFeed'
+    publishFeed: 'G9.Redis/g9-redis-feed'
     allowPackageConflicts: true
 
