--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ steps:
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '9.x.x'
+    version: '9.x'
 
 - task: NuGetToolInstaller@1  # Ensure NuGet CLI is installed
 
